--- a/static/detail-project.html
+++ b/static/detail-project.html
@@ -79,9 +79,9 @@
 					</li>
 
 					<li class="sidebar-item">
-						<a class="sidebar-link" href="pengadaan-barang.html">
+						<a class="sidebar-link" href="monitoring.html">
 							<i class="align-middle" data-feather="check-square"></i> <span
-								class="align-middle">Pengadaan baranng</span>
+								class="align-middle">Monitoring</span>
 						</a>
 					</li>
 					<!--
@@ -91,17 +91,12 @@
             </a>
 					</li>
 				-->
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="pengadaan-konstruksi.html">
-							<i class="align-middle" data-feather="align-left"></i> <span class="align-middle">Pengadaan
-								Konstruksi</span>
-						</a>
-					</li>
+					
 
 					<li class="sidebar-item active">
-						<a class="sidebar-link" href="icons-feather.html">
-							<i class="align-middle" data-feather="coffee"></i> <span class="align-middle">Jasa
-								Konsultasi</span>
+						<a class="sidebar-link" href="penyedia.html">
+							<i class="align-middle" data-feather="coffee"></i> <span class="align-middle">
+								Penyedia</span>
 						</a>
 					</li>
 
