--- a/static/datamaster.html
+++ b/static/datamaster.html
@@ -50,16 +50,14 @@
 					</li>
 
 					<li class="sidebar-item active">
-						<a class="sidebar-link" href="ui-buttons.html">
-							<i class="align-middle" data-feather="square"></i> <span class="align-middle">Jenis
-								Pengadaan</span>
+						<a class="sidebar-link" href="masterpenyedia.html">
+							<i class="align-middle" data-feather="square"></i> <span class="align-middle">Penyedia</span>
 						</a>
 					</li>
 
 					<li class="sidebar-item">
 						<a class="sidebar-link" href="pengadaan-barang.html">
-							<i class="align-middle" data-feather="check-square"></i> <span class="align-middle">Metode
-								Pengadaan</span>
+							<i class="align-middle" data-feather="check-square"></i> <span class="align-middle">Impor Data</span>
 						</a>
 					</li>
 
@@ -69,7 +67,7 @@
 								Pengadaan</span>
 						</a>
 					</li>
-
+					<!--
 					<li class="sidebar-item">
 						<a class="sidebar-link" href="pengadaan-konstruksi.html">
 							<i class="align-middle" data-feather="align-left"></i> <span class="align-middle">Satuan
@@ -83,7 +81,7 @@
 								Api</span>
 						</a>
 					</li>
-
+					-->
 					<li class="sidebar-header">
 						Plugins & Addons
 					</li>
