--- a/static/pengadaanlangsung.html
+++ b/static/pengadaanlangsung.html
@@ -52,32 +52,26 @@
                     </li>
 
                     <li class="sidebar-item active">
-                        <a class="sidebar-link" href="pengadaan-barang.html">
+                        <a class="sidebar-link" href="monitoring.html">
                             <i class="align-middle" data-feather="check-square"></i>
-                            <span class="align-middle">Pengadaan barang</span>
+                            <span class="align-middle">Monitoring</span>
                         </a>
                     </li>
 
                     <li class="sidebar-item">
-                        <a class="sidebar-link" href="pengadaan-konstruksi.html">
+                        <a class="sidebar-link" href="penyedia.html">
                             <i class="align-middle" data-feather="align-left"></i>
-                            <span class="align-middle">Pengadaan konstruksi</span>
+                            <span class="align-middle">Penyedia</span>
                         </a>
                     </li>
 
-                    <li class="sidebar-item">
-                        <a class="sidebar-link" href="jasa-konsultasi.html">
-                            <i class="align-middle" data-feather="coffee"></i>
-                            <span class="align-middle">Jasa konsultasi</span>
-                        </a>
-                    </li>
-
-                    <li class="sidebar-header">Plugins & Addons</li>
+             
+                    <li class="sidebar-header">Report</li>
 
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="charts-chartjs.html">
                             <i class="align-middle" data-feather="bar-chart-2"></i>
-                            <span class="align-middle">Charts</span>
+                            <span class="align-middle">Laporan</span>
                         </a>
                     </li>
                 </ul>
@@ -282,10 +276,10 @@
         function getData(text, dinas) {
             var api_ = ""
             if (dinas == "SELURUH SATUAN KERJA") {
-                api_ = "https://info.dresstyleone.com/public/api/datapakets/getdata?tahun="+text+'&metode=Pengadaan Langsung'
+                api_ = "http://localhost:8000/api/datapakets/getdata?tahun="+text+'&metode=Pengadaan Langsung'
             }
             else {
-                api_ = "https://info.dresstyleone.com/public/api/datapakets/getdata?tahun="+text+'&metode=Pengadaan Langsung'+'&satuan='+dinas
+                api_ = "http://localhost:8000/api/datapakets/getdata?tahun="+text+'&metode=Pengadaan Langsung'+'&satuan='+dinas
             }
 
             var table = $("#datatable").DataTable({
