--- a/static/penyedia.html
+++ b/static/penyedia.html
@@ -45,32 +45,33 @@
                     <li class="sidebar-header">Data list</li>
 
                     <li class="sidebar-item">
-                        <a class="sidebar-link" href="ui-buttons.html">
+                        <a class="sidebar-link" href="datamaster.html">
                             <i class="align-middle" data-feather="square"></i>
                             <span class="align-middle">Data Master</span>
                         </a>
                     </li>
 
                     <li class="sidebar-item active">
-                        <a class="sidebar-link" href="pengadaan-barang.html">
+                        <a class="sidebar-link" href="monitoring.html">
                             <i class="align-middle" data-feather="check-square"></i>
-                            <span class="align-middle">Pengadaan barang</span>
+                            <span class="align-middle">Monitoring</span>
                         </a>
                     </li>
 
                     <li class="sidebar-item">
-                        <a class="sidebar-link" href="pengadaan-konstruksi.html">
+                        <a class="sidebar-link" href="penyedia.html">
                             <i class="align-middle" data-feather="align-left"></i>
-                            <span class="align-middle">Pengadaan konstruksi</span>
+                            <span class="align-middle">Penyedia</span>
                         </a>
                     </li>
-
+                    <!--
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="jasa-konsultasi.html">
                             <i class="align-middle" data-feather="coffee"></i>
                             <span class="align-middle">Jasa konsultasi</span>
                         </a>
                     </li>
+                    -->
 
                     <li class="sidebar-header">Plugins & Addons</li>
 
@@ -277,10 +278,10 @@
         function getData(text, dinas) {
             var api_ = ""
             if (dinas == "SELURUH SATUAN KERJA") {
-                api_ = "https://info.dresstyleone.com/public/api/datapakets/getdata?tahun="+text+'&metode=Tender'
+                api_ = "http://localhost:8000/api/datapakets/getdata?tahun="+text+'&metode=Tender'
             }
             else {
-                api_ = "https://info.dresstyleone.com/public/api/datapakets/getdata?tahun="+text+'&metode=Tender'+'&satuan='+dinas
+                api_ = "http://localhost:8000/api/datapakets/getdata?tahun="+text+'&metode=Tender'+'&satuan='+dinas
             }
 
             var table = $("#datatable").DataTable({
@@ -289,7 +290,7 @@
                 ajax:
                 
                 {
-                    "url": "https://info.dresstyleone.com/public/api/datapakets/getpenyedia",
+                    "url": "http://localhost:8000/api/datapakets/getpenyedia",
                     "type": "GET",
                     "dataType": "JSON"
                 },
