--- a/static/plangsung.html
+++ b/static/plangsung.html
@@ -52,16 +52,16 @@
                     </li>
 
                     <li class="sidebar-item active">
-                        <a class="sidebar-link" href="pengadaan-barang.html">
+                        <a class="sidebar-link" href="monitoring.html">
                             <i class="align-middle" data-feather="check-square"></i>
-                            <span class="align-middle">Pengadaan barang</span>
+                            <span class="align-middle">Monitoring</span>
                         </a>
                     </li>
 
                     <li class="sidebar-item">
-                        <a class="sidebar-link" href="pengadaan-konstruksi.html">
+                        <a class="sidebar-link" href="penyedia.html">
                             <i class="align-middle" data-feather="align-left"></i>
-                            <span class="align-middle">Pengadaan konstruksi</span>
+                            <span class="align-middle">Penyedia</span>
                         </a>
                     </li>
 
@@ -133,7 +133,7 @@
                                         <th>Satuan Kerja</th>
                                         <th>Nama paket</th>
                                         <th>Metode Pengadaan.</th>
-                                        <th>Jenis</th>
+                               
                                         <th>Tanggal Kontrak</th>
                                         <th>Awal Pelaksanaan</th>
                                         <th>Akhir Pelaksanaan</th>
@@ -282,10 +282,10 @@
         function getData(text, dinas) {
             var api_ = ""
             if (dinas == "SELURUH SATUAN KERJA") {
-                api_ = "https://info.dresstyleone.com/public/api/datapakets/getdata?tahun="+text+'&metode=Penunjukan Langsung'
+                api_ = "http://localhost:8000/api/datapakets/getdata?tahun="+text+'&metode=Penunjukan Langsung'
             }
             else {
-                api_ = "https://info.dresstyleone.com/public/api/datapakets/getdata?tahun="+text+'&metode=Penunjukan Langsung'+'&satuan='+dinas
+                api_ = "http://localhost:8000/api/datapakets/getdata?tahun="+text+'&metode=Penunjukan Langsung'+'&satuan='+dinas
             }
 
             var table = $("#datatable").DataTable({
@@ -310,7 +310,7 @@
                         }
                      },
                     { data: "metode_pengadaan" },
-                    { data: "jenis" },
+                 
                     { data: "tgl_kontrak" },
                     { data: "awal_pelaksanaan" },
                     { data: "akhir_pelaksanaan" },
