--- a/static/datamaster.html
+++ b/static/datamaster.html
@@ -50,21 +50,20 @@
 					</li>
 
 					<li class="sidebar-item active">
+						<a class="sidebar-link" href="#">
+							<i class="align-middle" data-feather="square"></i> <span class="align-middle">Data Master</span>
+						</a>
+					</li>
+
+					<li class="sidebar-item">
+						<a class="sidebar-link" href="monitoring.html">
+							<i class="align-middle" data-feather="check-square"></i> <span class="align-middle">Monitoring</span>
+						</a>
+					</li>
+
+					<li class="sidebar-item">
 						<a class="sidebar-link" href="masterpenyedia.html">
-							<i class="align-middle" data-feather="square"></i> <span class="align-middle">Penyedia</span>
-						</a>
-					</li>
-
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="pengadaan-barang.html">
-							<i class="align-middle" data-feather="check-square"></i> <span class="align-middle">Impor Data</span>
-						</a>
-					</li>
-
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="ui-cards.html">
-							<i class="align-middle" data-feather="grid"></i> <span class="align-middle">Status
-								Pengadaan</span>
+							<i class="align-middle" data-feather="grid"></i> <span class="align-middle">Penyedia</span>
 						</a>
 					</li>
 					<!--
