--- a/static/index.html
+++ b/static/index.html
@@ -77,7 +77,7 @@
             </a>
           </li>
         -->
-          <li class="sidebar-header">Plugins & Addons</li>
+          <li class="sidebar-header">Report</li>
 
           <li class="sidebar-item">
             <a class="sidebar-link" href="charts-chartjs.html">
