--- a/static/seleksi.html
+++ b/static/seleksi.html
@@ -211,6 +211,7 @@
                 "DINAS LINGKUNGAN HIDUP KABUPATEN GRESIK",
                 "DINAS PARIWISATA DAN EKONOMI KREATIF KEBUDAYAAN KEPEMUDAAN DAN OLAH RAGA",
                 "DINAS PEKERJAAN UMUM DAN TATA RUANG",
+                "DINAS PEKERJAAN UMUM",
                 "DINAS PEMADAM KEBAKARAN DAN PENYELAMATAN",
                 "DINAS PEMBERDAYAAN MASYARAKAT DAN DESA KABUPATEN GRESIK",
                 "DINAS PENANAMAN MODAL DAN PTSP KABUPATEN GRESIK",
