--- a/static/penyedia.html
+++ b/static/penyedia.html
@@ -73,12 +73,12 @@
                     </li>
                     -->
 
-                    <li class="sidebar-header">Plugins & Addons</li>
+                    <li class="sidebar-header">Report</li>
 
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="charts-chartjs.html">
                             <i class="align-middle" data-feather="bar-chart-2"></i>
-                            <span class="align-middle">Charts</span>
+                            <span class="align-middle">Laporan</span>
                         </a>
                     </li>
                 </ul>
