--- a/static/epurchasing.html
+++ b/static/epurchasing.html
@@ -208,6 +208,7 @@
                 "DINAS PEKERJAAN UMUM DAN TATA RUANG",
                 "DINAS PEMADAM KEBAKARAN DAN PENYELAMATAN",
                 "DINAS PEMBERDAYAAN MASYARAKAT DAN DESA KABUPATEN GRESIK",
+                "DINAS KELUARGA BERENCANA",
                 "DINAS PENANAMAN MODAL DAN PTSP KABUPATEN GRESIK",
                 "DINAS PENDIDIKAN",
                 "DINAS PERHUBUNGAN",
