--- a/static/datamaster.html
+++ b/static/datamaster.html
@@ -332,7 +332,7 @@
 						<div class="col-12 col-lg-6">
 							<div class="row mb-4 mt-2">
 								<div class="col-9">
-									<h2>Data Kontrak</h2>
+									<h2>Data Monitoring</h2>
 								</div>
 								<div class="col-3">
 									<a class="btn btn-primary" href="input-monitoring.html">Tambah data</a>
