--- a/static/input-kontrak.html
+++ b/static/input-kontrak.html
@@ -571,43 +571,34 @@
                     "Content-type": "application/json; charset=UTF-8"
                 }
             }).then(response => {
-                //console.log(response.data)
-                /*if (response.status === 404)
-                    throw new Error('not found');
-                if (response.status !== 200)
-                    throw new Error('error');
-                */
 
-                /* if (response.message == true)
-                    console.log('error')
-                 if (response.message == false)
-                     console.log('error')
-                 */
-                //  console.log(response)
                 return response.json()
             }).then(data =>
                 getDataMessage(data)
                 // if(data.message == false)
                 // console.log(data)
             )
-                .then(function () {
-                    // window.location.href = "datamaster.html";
-
-                })
 
 
 
         }
         const getDataMessage = (data) => {
-            console.log("ini data", data)
+            //console.log("ini data", data)
+
             if (data.success) {
                 Swal.fire(
-                    'Good job!',
+                    'Succes insert!',
                     'You clicked the button!',
                     'success'
                 )
+                    .then(function (result) {
+                        if (result.value) {
+                            window.location = "datamaster.html";
+                        }
+                    })
             }
             else {
+
                 Swal.fire({
                     icon: 'error',
                     title: 'Oops...',
@@ -615,7 +606,9 @@
                     footer: '<a href="">Why do I have this issue?</a>'
                 })
             }
+
         }
+
 
 
 
