--- a/static/input-monitoring.html
+++ b/static/input-monitoring.html
@@ -29,7 +29,7 @@
 
 </head>
 
-<body onload="loadData()">
+<body>
     <div class="wrapper">
         <nav id="sidebar" class="sidebar js-sidebar">
             <div class="sidebar-content js-simplebar">
@@ -374,7 +374,7 @@
                     </div>
                 </div>
 
-                <button class="btn btn-primary mt-4">Simpan</button>
+                <button class="btn btn-primary mt-4" onclick="simpanData()">Simpan</button>
             </main>
 
             <footer class="footer">
@@ -590,16 +590,76 @@
             var nilai_hps = document.getElementById("nilai_hps").value;
             var efisiensi = document.getElementById("efisiensi").value;
             var metode = $("#metode_pengadaan option:selected").text();
-
-
-            var progress = document.getElementById("progress").value;
+            var status_paket = document.getElementById("status_paket").value;
             var tahun = $("#tahun option:selected").text();
             var pdn = $("#pdn option:selected").text();
-            var pradika = $("#pradika option:selected").text();
             var umk = $("#umk option:selected").text();
+            var jenis_pengadaan = $("#jenis_pengadaan option:selected").text();
+            var tahapan = $("#tahapan option:selected").text();
+
+            fetch("http://localhost:8000/api/datapakets/simpanmonitor", {
+
+                // Adding method type
+                method: "POST",
+
+                // Adding body or contents to send
+                body: JSON.stringify({
+                    kode_rup: kode_rup,
+                    nama_paket: nama_paket,
+                    nilai_kontrak: nilai_kontrak,
+                    tahun: tahun,
+                    metode_pengadaan: metode,
+                    satuan_kerja: satuankerja,
+                    pdn: pdn,
+                    umk: umk,
+                    efisiensi: efisiensi,
+                    nilai_hps, nilai_hps,
+                    pagu_urp, pagu_urp,
+                    tahapan, tahapan,
+                    status_paket, status_paket,
+                    jenis_pengadaan: jenis_pengadaan
+
+                }),
+
+                // Adding headers to the request
+                headers: {
+                    "Content-type": "application/json; charset=UTF-8"
+                }
+            }).then(response => {
+
+                return response.json()
+            }).then(data =>
+                getDataMessage(data)
+                // if(data.message == false)
+                // console.log(data)
+            )
+
         }
 
+        const getDataMessage = (data) => {
 
+            if (data.success) {
+                Swal.fire(
+                    'Succes insert!',
+                    'You clicked the button!',
+                    'success'
+                )
+                    .then(function (result) {
+                        if (result.value) {
+                            window.location = "datamaster.html";
+                        }
+                    })
+            }
+            else {
+
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: 'Something went wrong!',
+                    footer: '<a href="">Why do I have this issue?</a>'
+                })
+            }
+        }
 
     </script>
     <script src="js/app.js"></script>
