--- a/static/masterpenyedia.html
+++ b/static/masterpenyedia.html
@@ -278,12 +278,12 @@ https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js
 								
 								<div class="dropdown-divider"></div>
 								
-								<a class="dropdown-item" href="#">Log out</a>
+								<a class="dropdown-item" href="index.html" onclick="logOut()">Log out</a>
 							</div>
 						</li>
 					</ul>
 				</div>
-		</nav>
+		    </nav>
 
 
 
