--- a/static/input-monitoring.html
+++ b/static/input-monitoring.html
@@ -279,7 +279,7 @@
 
                                 <div class="dropdown-divider"></div>
 
-                                <a class="dropdown-item" href="#">Log out</a>
+                                <a class="dropdown-item" href="index.html" onclick="logOut()">Log out</a>
                             </div>
                         </li>
                     </ul>
