--- a/static/pages-profile.html
+++ b/static/pages-profile.html
@@ -300,7 +300,7 @@
 
 								<div class="dropdown-divider"></div>
 
-								<a class="dropdown-item" href="#">Log out</a>
+								<a class="dropdown-item" href="index.html" onclick="logOut()">Log out</a>
 							</div>
 						</li>
 					</ul>
